kubernetes/apps/infra-cluster/network/technitium-infra/config/peer-services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: technitium-peer-0
  namespace: network
spec:
  selector:
    statefulset.kubernetes.io/pod-name: technitium-0
  ports:
    - name: dns-tcp
      protocol: TCP
      port: 53
      targetPort: 53
    - name: dns-udp
      protocol: UDP
      port: 53
      targetPort: 53
    - name: cluster-https
      protocol: TCP
      port: 53443
      targetPort: 53443
---
apiVersion: v1
kind: Service
metadata:
  name: technitium-peer-1
  namespace: network
spec:
  selector:
    statefulset.kubernetes.io/pod-name: technitium-1
  ports:
    - name: dns-tcp
      protocol: TCP
      port: 53
      targetPort: 53
    - name: dns-udp
      protocol: UDP
      port: 53
      targetPort: 53
    - name: cluster-https
      protocol: TCP
      port: 53443
      targetPort: 53443
