kubernetes/apps/infra-cluster/network/technitium-infra/config/http-route-internal.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: technitium
  namespace: network
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: http
  hostnames:
    - dns.krapulax.home
  rules:
    - backendRefs:
        - name: technitium
          namespace: network
          port: 5380
